--- a/web/react-backoffice/tsconfig.json
+++ b/web/react-backoffice/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -28,4 +28,3 @@
   "include": ["src", "vite.config.ts"],
   "references": []
 }
-
