--- a/web/react-backoffice/package.json
+++ b/web/react-backoffice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tksk",
+  "name": "react-backoffice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,7 +23,8 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -43,4 +44,3 @@
     "vite": "^7.1.7"
   }
 }
-
