--- a/infra/development/k8s/api-backoffice-deployment.yaml
+++ b/infra/development/k8s/api-backoffice-deployment.yaml
@@ -30,6 +30,11 @@ spec:
                 configMapKeyRef:
                   key: BACKOFFICE_HTTP_ADDR
                   name: app-config
+            - name: BACKOFFICE_DB_DSN
+              valueFrom:
+                configMapKeyRef:
+                  key: BACKOFFICE_DB_DSN
+                  name: app-config
 ---
 apiVersion: v1
 kind: Service
