remove: Remove risk ops features

--- a/infra/development/k8s/app-config.yaml
+++ b/infra/development/k8s/app-config.yaml
@@ -7,3 +7,6 @@ data:
   GATEWAY_HTTP_ADDR: ":8080"
   BACKOFFICE_HTTP_ADDR: ":8081"
   BACKOFFICE_DB_DSN: "postgres://postgres:postgres@database-postgres:5432/ekyc_backoffice?sslmode=disable"
+  VITE_API_BACKOFFICE_URL: "http://localhost:8081"
+  VITE_API_GATEWAY_URL: "http://localhost:8080"
+  NEXT_PUBLIC_API_URL: "http://localhost:8080"
