feat: Add new service -> API AI Support with python

--- a/infra/development/k8s/app-config.yaml
+++ b/infra/development/k8s/app-config.yaml
@@ -10,3 +10,7 @@ data:
   VITE_API_BACKOFFICE_URL: "http://localhost:8081"
   VITE_API_GATEWAY_URL: "http://localhost:8080"
   NEXT_PUBLIC_API_URL: "http://localhost:8080"
+  AI_SUPPORT_SERVICE_NAME: "api-AI-support"
+  AI_SUPPORT_GRPC_ADDR: "0.0.0.0:50052"
+  AI_SUPPORT_HTTP_ADDR: "0.0.0.0:8082"
+  AI_SUPPORT_DB_DSN: "postgres://postgres:postgres@database-postgres:5432/ekyc_backoffice?sslmode=disable"
