--- a/services/api-AI-support/requirements.txt
+++ b/services/api-AI-support/requirements.txt
@@ -7,12 +7,12 @@ contourpy==1.3.3
 cycler==0.12.1
 easyocr==1.7.2
 facenet-pytorch==2.6.0
+grpcio==1.67.1
+psycopg[binary]==3.2.3
 filelock==3.20.0
 flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.10.0
-grpcio==1.67.1
-grpcio-tools==1.67.1
 idna==3.11
 ImageIO==2.37.2
 jax==0.7.1
@@ -22,7 +22,7 @@ kiwisolver==1.4.9
 lazy_loader==0.4
 MarkupSafe==3.0.3
 matplotlib==3.10.7
-mediapipe==0.10.21
+mediapipe==0.10.18
 ml_dtypes==0.5.3
 mpmath==1.3.0
 networkx==3.5
@@ -33,8 +33,7 @@ opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 packaging==25.0
 pillow==10.2.0
-pika==1.3.2
-protobuf==4.25.8
+protobuf==4.25.3
 pyclipper==1.3.0.post6
 pycparser==2.23
 pyparsing==3.2.5
