--- a/infra/development/k8s/app-config.yaml
+++ b/infra/development/k8s/app-config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-config
 data:
   ENVIRONMENT: "development"
-  GATEWAY_HTTP_ADDR: ":8080"
+  GATEWAY_HTTP_ADDR: "0.0.0.0:8080"
   BACKOFFICE_HTTP_ADDR: ":8081"
   BACKOFFICE_DB_DSN: "postgres://postgres:postgres@database-postgres:5432/ekyc_backoffice?sslmode=disable"
   VITE_API_BACKOFFICE_URL: "http://localhost:8081"
