fix: k8s, docker config

--- a/services/api-gateway/Cargo.toml
+++ b/services/api-gateway/Cargo.toml
@@ -13,3 +13,4 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 thiserror = "1.0"
 anyhow = "1.0"
 tower-http = {version = "0.5", features = ["trace"]}
+http = "1.0"
