--- a/infra/development/k8s/api-gateway-deployment.yaml
+++ b/infra/development/k8s/api-gateway-deployment.yaml
@@ -30,6 +30,11 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: GATEWAY_HTTP_ADDR
+            - name: AI_SUPPORT_GRPC_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: AI_SUPPORT_GRPC_ENDPOINT
 ---
 apiVersion: v1
 kind: Service
