--- a/services/api-AI-support/requirements.txt
+++ b/services/api-AI-support/requirements.txt
@@ -41,6 +41,7 @@ python-bidi==0.6.7
 python-dateutil==2.9.0.post0
 PyYAML==6.0.3
 requests==2.32.5
+pika==1.3.2
 scikit-image==0.25.2
 scipy==1.16.3
 sentencepiece==0.2.1
