--- a/services/api-gateway/Cargo.toml
+++ b/services/api-gateway/Cargo.toml
@@ -18,6 +18,7 @@ tonic = { version = "0.11", features = ["transport"] }
 prost = "0.12"
 async-trait = "0.1"
 base64 = "0.22"
+uuid = { version = "1.11", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.11"
