--- a/services/api-AI-support/requirements.txt
+++ b/services/api-AI-support/requirements.txt
@@ -1,58 +1,174 @@
 absl-py==2.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+aistudio-sdk==0.3.8
+annotated-types==0.7.0
+anyio==4.11.0
+astor==0.8.1
+attrdict==2.0.1
 attrs==25.4.0
+babel==2.17.0
+bce-python-sdk==0.9.52
+beautifulsoup4==4.14.2
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.11.12
 cffi==2.0.0
+chardet==5.2.0
 charset-normalizer==3.4.4
+click==8.3.1
+colorlog==6.10.1
 contourpy==1.3.3
+cryptography==46.0.3
+cssselect==1.3.0
+cssutils==2.11.1
 cycler==0.12.1
+Cython==3.2.1
+dataclasses-json==0.6.7
+decorator==5.2.1
+distro==1.9.0
+easyocr==1.7.2
+einops==0.8.1
+et_xmlfile==2.0.0
 facenet-pytorch==2.6.0
-grpcio==1.67.1
-psycopg[binary]==3.2.3
 filelock==3.20.0
+fire==0.7.1
+Flask==3.1.2
+flask-babel==4.0.0
 flatbuffers==25.9.23
 fonttools==4.60.1
+frozenlist==1.8.0
 fsspec==2025.10.0
+ftfy==6.3.1
+future==1.0.0
+google-api-core==2.17.1
+google-auth==2.29.0
+google-oauth==1.0.1
+googleapis-common-protos==1.63.0
+grpcio==1.60.1
+grpcio-status==1.60.1
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface_hub==1.1.4
 idna==3.11
 ImageIO==2.37.2
+imagesize==1.4.1
+imgaug==0.4.0
+itsdangerous==2.2.0
 jax==0.7.1
 jaxlib==0.7.1
 Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 kiwisolver==1.4.9
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.79
+langchain-openai==0.3.35
+langchain-text-splitters==0.3.11
+langsmith==0.4.43
 lazy_loader==0.4
+lmdb==1.7.5
+lxml==6.0.2
 MarkupSafe==3.0.3
+marshmallow==3.26.1
 matplotlib==3.10.7
 mediapipe==0.10.18
 ml_dtypes==0.5.3
+modelscope==1.31.0
+more-itertools==10.8.0
 mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
 networkx==3.5
 ninja==1.13.0
 numpy==1.26.4
+openai==2.8.0
 opencv-contrib-python==4.11.0.86
+opencv-python==4.6.0.66
 opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
 opt_einsum==3.4.0
+orjson==3.11.4
 packaging==25.0
+pandas==2.3.3
+pdf2docx==0.5.8
+pika==1.3.2
 pillow==10.2.0
+premailer==3.10.0
+prettytable==3.17.0
+propcache==0.4.1
+proto-plus==1.24.0
 protobuf==4.25.3
+psutil==7.1.3
+psycopg==3.2.3
+psycopg-binary==3.2.3
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pyclipper==1.3.0.post6
 pycparser==2.23
+pycryptodome==3.23.0
+pydantic==2.12.4
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+PyMuPDF==1.26.6
+pyOpenSSL==25.3.0
 pyparsing==3.2.5
+pypdfium2==5.0.0
 python-bidi==0.6.7
 python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+pytz==2025.2
 PyYAML==6.0.3
+RapidFuzz==3.14.3
+rarfile==4.2
+regex==2025.11.3
 requests==2.32.5
-pika==1.3.2
+requests-toolbelt==1.0.0
+rsa==4.9.1
+ruamel.yaml==0.18.16
+ruamel.yaml.clib==0.2.15
+safetensors==0.6.2
 scikit-image==0.25.2
+scikit-learn==1.7.2
 scipy==1.16.3
 sentencepiece==0.2.1
 setuptools==80.9.0
 shapely==2.1.2
+shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
 sounddevice==0.5.3
+soupsieve==2.8
+SQLAlchemy==2.0.44
 sympy==1.14.0
+tenacity==9.1.2
+termcolor==3.2.0
+threadpoolctl==3.6.0
 tifffile==2025.10.16
+tiktoken==0.12.0
+tokenizers==0.22.1
 torch==2.2.2
 torchvision==0.17.2
 tqdm==4.67.1
+typer-slim==0.20.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
+ujson==5.11.0
 urllib3==2.5.0
+visualdl==2.5.3
+wcwidth==0.2.14
+Werkzeug==3.1.3
 wheel==0.45.1
+yarl==1.22.0
+zstandard==0.25.0
