--- a/services/api-gateway/Cargo.toml
+++ b/services/api-gateway/Cargo.toml
@@ -19,6 +19,8 @@ prost = "0.12"
 async-trait = "0.1"
 base64 = "0.22"
 uuid = { version = "1.11", features = ["v4"] }
+reqwest = { version = "0.12", features = ["json", "multipart"] }
+http-body-util = "0.1"
 
 [build-dependencies]
 tonic-build = "0.11"
