--- a/mobile/flutter_beneficiary/ios/Runner/Info.plist
+++ b/mobile/flutter_beneficiary/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Akses kamera dibutuhkan untuk memotret KTP dan melakukan selfie.</string>
 </dict>
 </plist>
