--- a/mobile/flutter_beneficiary/pubspec.yaml
+++ b/mobile/flutter_beneficiary/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  camera: ^0.10.5+9
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
